DT-2693 Fixes Lender Match landing page misalignment
- Margin between hero and “How it works”
- “Get Ready” width and alignment
- “Details” width and alignment

--- a/src/client/components/organisms/lender-match/landing-page/how-it-works.scss
+++ b/src/client/components/organisms/lender-match/landing-page/how-it-works.scss
@@ -1,7 +1,9 @@
-
 .section {
     @include grid-column(12, $desktop-nav)
-    margin-top: 60px;
+    margin-bottom: 50px;
+    @include grid-media ($sba-grid-medium) {
+        margin-top: 50px;
+    }
 }
 
 .title {
